<resources>
    <string name="app_name">Lishe360</string>
    <string name="label_create_post_activity">Tengeneza chapisho</string>
    <string name="label_post_detail_activity">Lishe360</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>

    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>

    <string name="comment_text_hint">Enter your comment…</string>

    <string name="feedback">Enter your feedback…</string>

    <string name="label_comments">Comments (%1$d):</string>

    <string name="create_post_menu_label">Post</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>

    <!-- Strings related to registration and login -->
    <string name="prompt_name">Name</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="error_authentication">Authentication failed.</string>


    <string name="loading">Loading...</string>
    <string name="removing">Removing...</string>
    <string name="error_general">Something went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="feedresponse">Thanks for your feedback</string>


    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="add_complain">Complain</string>
    <string name="edit_post_menu">Edit post</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="complain_text">You can complain to this post if it contains violence,
        bullying and threats, hate speech, tragic events and sexually explicit contents.
        Nobody will see the post if you complain to it. You can\'t delete your complain.</string>

    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Posted by:</string>

    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>

    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>

    <string name="posts_label">Posts:</string>
    <string name="complain_sent">Complain was sent successfully</string>
    <string name="now_time_range">now</string>

    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>


    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>

    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>

    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>

    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>

    <!--Firebase errors-->
    <string name="permission_denied_error">Please check your rules to access the Firebase Realtime Database</string>


    <string name="spinner_title">Select Category</string>

    <string name="slide_1_title">Lishe360</string>
    <string name="slide_1_desc">Inakupatia muongozo wa jinsi ya kutunza watoto wadogo </string>
    <string name="copyright_details">Copyright \u00a9 2018 Lishe360 Tanzania</string>

    <string name="feednews">Nawashukuru wahusika wote wa Lishe 360…
        nilijiunga na program mwezi wa 4 nikiwa na mtoto wa mwaka 1 na miezi 6.
        Tatizo kubwa kulikuwa ni Mtoto kusumbua kula, anajitapisha hata kabla ya kuanza kulishwa.
        Kwaiyo nikaamua kuwa nampa uji tu kuanzia asubuhi hadi jioni maana ndio unakuwa rahisi kumkaba na kumbana pua...
        kumbe nilikuwa nafanya makosa na kutomtendea mtoto haki.
        Sasa faida niliyopata baada ya kujiunga na Lishe 360 nimejua namna ya kuandaa vyakula mbalimbali na kuvipika tena vinawekwa viungo dah!!
        Sasa mtoto wangu anakula chakula kingi hadi naogopa bila hata kumkaba. Kwa sisi tunaoishi Arusha kutokana na hali ya hewa ya huku unywaji maji ni shida ila nimejua kuwa natakiwa kumpa maji ya kunywa anapoamka.
        Mwanzo ilikuwa shida kidogo ila sasa anakunywa maji vizuri tena ya kutosha ukiongeza na milkshake pamoja na smoothie s mbalimbali. Ninawashukuru sana walimu na Mungu awabariki maana mmefungua fahamu zangu kwa kiasi cha ajabu!!! Lishe 360 oyeee!!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>


    <string name="notice_board">Subscribe To Our Health Tips </string>
    <string name="our_goal">Stay health and enjoy life in fullness</string>
    <string name="instruction">If you are hoping your child to stay health you are welcome to join us in our journey with million of people world wide on useful and life changing tips that will not
    only make you child to stay health but strong as she or he grow older. </string>
    <string name="subscribe">Subscription status </string>
    <string name="tigo_number">+255 715 007 621</string>
    <string name="Airtel_number">+255 784 297 731</string>
    <string name="Vodacom_number">+255 746 715 608</string>

    <string name="hedbioo">
        LISHE360 ni darasa ambalo linalokusaidia kujenga afya bora ya mtoto wako na kumfanya awe mmwenye furaha tele kwa
        kukupatia elimu ya lishe bora na usimamizi makini kutoka kwa wataalamu wa lishe waliobobea.
    </string>

    <string name="bio">
        Tumeshasaidia zaidi ya wazazi 3,000 kupitia programu hii na zaidi ya wazazi 80,000 kupitia ukurasa huu wa facebook.
         pamoja na mafunzo yanayoendeshwa kwa programu ya lishe360. Tuna shauku kubwa sana na wewe uwe mmoja wa wazazi tutakaowasaidia kupitia LISHE360 na ukurasa huu.
    </string>

    <string name="hedingbio">Lengo letu ni kuhakikisha mtoto wako anapata lishe bora zaidi itakayomfanya awe na afya bora zaidi, mchangamfu zaidi na mwenye furaha zaidi.</string>
    <string name="title_collapsing_toolbar">Lishe Bora Tanzania</string>
    <string name="about">ABOUT</string>

    <string name="sms">Huduma hii itakuwezesha kuwasiliana na mkufunzi wetu moja kwa moja</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="titlesms">Lishe360 </string>
    <string name="posts">Ingiza chapisho lako hapa</string>


</resources>
