<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/white"
    android:padding="10dp"
    android:orientation="vertical">


        <TextView
            android:id="@+id/txt_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawableLeft="@mipmap/ic_vodacom"
            android:text="@string/Vodacom_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

      <TextView
        android:id="@+id/txt_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="15dp"
          android:drawableLeft="@mipmap/ic_newtigo"
        android:text="@string/tigo_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:drawableLeft="@mipmap/ic_airtel"
        android:text="@string/Airtel_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>