<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f3f6fb"
    android:orientation="vertical">


<android.support.design.widget.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <include
            layout="@layout/about_us_toolbar" />

</android.support.design.widget.AppBarLayout>




<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/wallp"
            app:layout_collapseMode="parallax"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_regular_padding"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="About Lishe360"
            android:textColor="#444444"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/login_regular_padding"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_text"
                    android:fontFamily="sans-serif"
                    android:text="@string/hedbioo"
                    android:textSize="@dimen/content_text_size"/>



                 <TextView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_margin="@dimen/margin_text"
                      android:text="@string/bio"
                      android:textSize="@dimen/content_text_size"
                     android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_text"
                android:text="@string/hedingbio"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                android:fontFamily="sans-serif"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <include layout="@layout/cardview_aboutus"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>





