<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/home_appBar_layout"
        app:elevation="0dp">
        <include
            layout="@layout/post_details_toolbar" />
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_appBar_layout"
        android:layout_above="@+id/newCommentContainer"
        android:background="#f3f6fb">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/card"
                    android:padding="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/outlined_borders">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/login_regular_padding"
                        android:paddingLeft="@dimen/login_regular_padding"
                        android:id="@+id/author_layout">

                        <com.cardeanutrition.lishe360app.views.CircularImageView
                            android:id="@+id/authorImageView"
                            android:layout_width="@dimen/post_list_item_author_image_side"
                            android:layout_height="@dimen/post_list_item_author_image_side"
                            app:border="true"
                            app:civ_border_color="#dfdfdf"
                            app:civ_border_width="0.5dp"
                            app:shadow="false"
                            app:shadow_color="@color/circle_image_shadow"
                            app:shadow_radius="0dp"
                            android:src="@drawable/blank_profile_image"
                            android:transitionName="@string/post_author_image_transition_name"
                            tools:targetApi="lollipop"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_toRightOf="@id/authorImageView"
                            android:paddingLeft="@dimen/feed_item_profile_info_padd">

                            <TextView
                                android:id="@+id/authorTextView"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/login_regular_padding"
                                android:text="chakula cha jion"
                                android:fontFamily="sans-serif"
                                android:textColor="#444444"
                                android:textSize="@dimen/username_text_size"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/dateTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#aaaaaa"
                                android:textStyle="bold"
                                android:fontFamily="sans-serif"
                                android:text="Time Goes Here"
                                android:textSize="@dimen/username_date_text_size"/>

                        </LinearLayout>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_below="@id/author_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alessandro Barreto"
                        android:fontFamily="sans-serif"
                        android:paddingTop="@dimen/login_regular_padding"
                        android:paddingBottom="@dimen/login_regular_padding"
                        android:paddingLeft="@dimen/login_regular_padding"
                        android:textColor="#444444"
                        android:paddingRight="@dimen/login_regular_padding"
                        android:textSize="@dimen/header_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descriptionEditText"
                        android:textSize="@dimen/content_text_size"
                        android:text="@string/hedingbio"
                        android:paddingLeft="@dimen/login_regular_padding"
                        android:paddingRight="@dimen/login_regular_padding"
                        android:paddingBottom="@dimen/login_regular_padding"
                        android:layout_below="@id/titleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"/>

                    <RelativeLayout
                        android:id="@+id/imageContainer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/post_detail_image_height"
                        android:layout_marginBottom="@dimen/intrinsic_padding"
                        android:layout_below="@id/descriptionEditText">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="@dimen/progress_bar_size"
                            android:layout_height="@dimen/progress_bar_size"
                            android:layout_centerInParent="true"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/postImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:visibility="visible"
                            android:transitionName="@string/post_image_transition_name"
                            tools:targetApi="lollipop"/>

                    </RelativeLayout>

                    <include
                        android:id="@+id/countersContainer"
                        layout="@layout/counters_panel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageContainer" />

                </RelativeLayout>


            <TextView
                android:id="@+id/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card"
                android:padding="5dp"
                android:paddingTop="3dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:text="Comments"
                android:textSize="@dimen/username_date_text_size"
                android:textColor="#444444"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/commentsLabel"
                android:background="@drawable/outlined_borders"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/commentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/comment_list_item" />

                <ProgressBar
                    android:id="@+id/commentsProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/warningCommentsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/intrinsic_padding"
                    android:text="@string/internet_connection_failed"
                    android:visibility="gone" />

            </RelativeLayout>



        </RelativeLayout>


    </ScrollView>



    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/newCommentContainer"
        android:background="@drawable/top_shadow" />

    <LinearLayout
        android:id="@+id/newCommentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/username_text_size"
            android:background="@android:color/transparent"
            android:hint="@string/comment_text_hint"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/new_comment_max_height"
            android:minHeight="@dimen/new_comment_min_height"
            android:padding="@dimen/intrinsic_padding" />

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="@dimen/send_button_size"
            android:layout_height="@dimen/send_button_size"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/intrinsic_padding"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_send"
            android:enabled="false"
            android:paddingLeft="@dimen/large_intrinsic_padding"
            android:paddingRight="@dimen/large_intrinsic_padding"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>


    </LinearLayout>

</RelativeLayout>




